--- a/service_user/src/main/resources/application-dev.yml
+++ b/service_user/src/main/resources/application-dev.yml
@@ -12,7 +12,7 @@ spring:
     url: jdbc:mysql://localhost:3306/test?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
 #    type: com.alibaba.druid.pool.DruidDataSource
     username: root
-    password: 123
+    password: 553730901cxw
 
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
