添加自定义参数处理器，完善登录和注册的功能

--- a/common/common_util/pom.xml
+++ b/common/common_util/pom.xml
@@ -11,5 +11,11 @@
 
     <artifactId>common_util</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
