--- a/service_user/src/main/resources/application-dev.yml
+++ b/service_user/src/main/resources/application-dev.yml
@@ -12,12 +12,11 @@ spring:
     url: jdbc:mysql://localhost:3306/test?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
 #    type: com.alibaba.druid.pool.DruidDataSource
     username: root
-    password: 123456
+    password: 123
 
   redis:
     host: 127.0.0.1
     port: 6379
-    password: 123456
     database: 0
 
 
@@ -30,4 +29,9 @@ mybatis:
 #  mapper-locations: classpath:mapper/*.xml
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+# 令牌桶限流配置
+tokenbucket:
+  capacity: 100
+  rate: 1
 
