--- a/service_user/src/main/resources/application-prod.yml
+++ b/service_user/src/main/resources/application-prod.yml
@@ -9,17 +9,16 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/test?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://8.134.208.93:3306/db_douyin?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
 #    type: com.alibaba.druid.pool.DruidDataSource
-    username: root
-    password: 123456
+    username: ENC(5Ev24JNagGONP1Ca9+xZWg==)
+    password: ENC(lQ3mg76A7j6WOm/j8zQ5dyfaDa06L4FX)
 
   redis:
-    host: 127.0.0.1
+    host: 8.134.208.93
     port: 6379
-    password: 123456
+    password: ENC(lQ3mg76A7j6WOm/j8zQ5dyfaDa06L4FX)
     database: 0
-
 
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
@@ -31,3 +30,14 @@ mybatis:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
+# 令牌桶限流配置
+tokenbucket:
+  capacity: 100
+  rate: 1
+
+
+jasypt:
+  encryptor:
+    password: ${DouyinSecretKey}  #解密密钥，通过环境变量读取
+    algorithm: PBEWithMD5AndDES
+    iv-generator-classname: org.jasypt.iv.NoIvGenerator
