--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <module>service_feed</module>
         <module>service_favorite</module>
         <module>service_relation</module>
+        <module>model</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
