--- a/service_gateway/src/main/resources/application.properties
+++ b/service_gateway/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+server.port=80
+
+spring.application.name=service-gateway
+
+# nacos地址
+spring.cloud.nacos.discovery.server-addr=localhost:8848
+#spring.cloud.nacos.discovery.password=123456
+spring.cloud.gateway.discovery.locator.enabled=true
+
+# user-service
+spring.cloud.gateway.routes[0].id=service-user
+spring.cloud.gateway.routes[0].uri=lb://service-user
+spring.cloud.gateway.routes[0].predicates= Path=/*/user/**
+
+# video-service
+spring.cloud.gateway.routes[1].id=service-feed
+spring.cloud.gateway.routes[1].uri=lb://service-feed
+spring.cloud.gateway.routes[1].predicates= Path=/*/feed/**
+
+
 
