--- a/service_feed/src/main/resources/application-dev.yml
+++ b/service_feed/src/main/resources/application-dev.yml
@@ -17,13 +17,25 @@ spring:
   redis:
     host: 127.0.0.1
     port: 6379
-    database: 1
+    database: 0
 
 
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
 
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+
+feign:
+  client:
+    config:
+      default:
+        connectTimeout: 2000
+        readTimeout: 2000
+        loggerLevel: FULL
 
 mybatis:
 #  mapper-locations: classpath:mapper/*.xml
