--- a/service_user/src/main/resources/application-dev.yml
+++ b/service_user/src/main/resources/application-dev.yml
@@ -19,11 +19,22 @@ spring:
     port: 6379
     database: 0
 
-
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
 
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+
+feign:
+  client:
+    config:
+      default:
+        connectTimeout: 2000
+        readTimeout: 2000
+        loggerLevel: FULL
 
 mybatis:
 #  mapper-locations: classpath:mapper/*.xml
@@ -34,4 +45,6 @@ mybatis:
 tokenbucket:
   capacity: 100
   rate: 1
+
+
 
