添加oss配置和视频发布接口

--- a/service_gateway/src/main/resources/application.properties
+++ b/service_gateway/src/main/resources/application.properties
@@ -17,5 +17,10 @@ spring.cloud.gateway.routes[1].id=service-feed
 spring.cloud.gateway.routes[1].uri=lb://service-feed
 spring.cloud.gateway.routes[1].predicates= Path=/*/feed/**
 
+# video-service
+spring.cloud.gateway.routes[2].id=service-feed
+spring.cloud.gateway.routes[2].uri=lb://service-feed
+spring.cloud.gateway.routes[2].predicates= Path=/*/publish/**
+
 
 
