--- a/service_feed/pom.xml
+++ b/service_feed/pom.xml
@@ -76,6 +76,11 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.qcloud</groupId>
+            <artifactId>cos_api</artifactId>
+            <version>5.6.155</version>
+        </dependency>
 
         <!--模块导入-->
         <dependency>
