--- a/service_feed/pom.xml
+++ b/service_feed/pom.xml
@@ -51,6 +51,14 @@
             <version>8.0.33</version>
             <scope>runtime</scope>
         </dependency>
+
+        <!--hutool-->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.7.17</version>
+        </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
