查看评论和发布评论功能 发现视频流有时会获取不到的bug

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <module>service_favorite</module>
         <module>service_relation</module>
         <module>model</module>
+        <module>service_comment</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
