--- a/service_gateway/src/main/resources/application.properties
+++ b/service_gateway/src/main/resources/application.properties
@@ -22,5 +22,10 @@ spring.cloud.gateway.routes[2].id=service-feed
 spring.cloud.gateway.routes[2].uri=lb://service-feed
 spring.cloud.gateway.routes[2].predicates= Path=/*/publish/**
 
+# comment-service
+spring.cloud.gateway.routes[3].id=service-comment
+spring.cloud.gateway.routes[3].uri=lb://service-comment
+spring.cloud.gateway.routes[3].predicates= Path=/*/comment/**
+
 
 
