点赞接口完善

--- a/service_favorite/src/main/resources/application-dev.yml
+++ b/service_favorite/src/main/resources/application-dev.yml
@@ -8,7 +8,7 @@ server:
 
 spring:
   application:
-    name: service-feed
+    name: service-favorite
   servlet:
     multipart:
       enabled: true
