点赞接口修改

--- a/service_favorite/src/main/resources/application-prod.yml
+++ b/service_favorite/src/main/resources/application-prod.yml
@@ -40,12 +40,12 @@ feign:
   client:
     config:
       default:
-        connectTimeout: 2000
-        readTimeout: 2000
+        connectTimeout: 10000
+        readTimeout: 10000
         loggerLevel: FULL
 
 mybatis:
-#  mapper-locations: classpath:mapper/*.xml
+  mapper-locations: classpath:mapper/*.xml
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
