--- a/service_gateway/src/main/resources/application.properties
+++ b/service_gateway/src/main/resources/application.properties
@@ -27,5 +27,10 @@ spring.cloud.gateway.routes[3].id=service-comment
 spring.cloud.gateway.routes[3].uri=lb://service-comment
 spring.cloud.gateway.routes[3].predicates= Path=/*/comment/**
 
+# favorite-service
+spring.cloud.gateway.routes[4].id=service-favorite
+spring.cloud.gateway.routes[4].uri=lb://service-favorite
+spring.cloud.gateway.routes[4].predicates= Path=/*/favorite/**
+
 
 
