--- a/common/feign_util/pom.xml
+++ b/common/feign_util/pom.xml
@@ -28,5 +28,15 @@
 <!--            <scope>provided</scope>-->
         </dependency>
     </dependencies>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <classifier>feign_util</classifier>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
