--- a/common/pom.xml
+++ b/common/pom.xml
@@ -38,7 +38,16 @@
             <artifactId>jaxb-api</artifactId>
             <version>2.3.1</version>
         </dependency>
-
-
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <classifier>common</classifier>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
