--- a/model/pom.xml
+++ b/model/pom.xml
@@ -33,5 +33,16 @@
             <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <classifier>model</classifier>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
