--- a/common/pom.xml
+++ b/common/pom.xml
@@ -9,9 +9,9 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>common</artifactId>
     <packaging>pom</packaging>
+    <artifactId>common</artifactId>
+
     <modules>
         <module>common_util</module>
         <module>feign_util</module>
@@ -38,7 +38,14 @@
             <artifactId>jaxb-api</artifactId>
             <version>2.3.1</version>
         </dependency>
-
-
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
