--- a/service_gateway/src/main/resources/application.properties
+++ b/service_gateway/src/main/resources/application.properties
@@ -32,5 +32,10 @@ spring.cloud.gateway.routes[4].id=service-favorite
 spring.cloud.gateway.routes[4].uri=lb://service-favorite
 spring.cloud.gateway.routes[4].predicates= Path=/*/favorite/**
 
+opentracing.jaeger.enabled=true
+#opentracing.jaeger.udp-sender.host=8.134.208.93
+#opentracing.jaeger.udp-sender.port=6831
+opentracing.jaeger.http-sender.url=http://8.134.208.93:14268/api/traces
+
 
 
