--- a/service_user/src/main/resources/application-dev.yml
+++ b/service_user/src/main/resources/application-dev.yml
@@ -47,4 +47,11 @@ tokenbucket:
   rate: 1
 
 
+opentracing:
+  jaeger:
+    enabled: true
+    http-sender:
+      url: http://8.134.208.93:14268/api/traces
+
+
 
