--- a/service_feed/src/main/resources/application-prod.yml
+++ b/service_feed/src/main/resources/application-prod.yml
@@ -45,7 +45,7 @@ feign:
         loggerLevel: FULL
 
 mybatis:
-#  mapper-locations: classpath:mapper/*.xml
+  mapper-locations: classpath:mapper/*.xml
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
