关注功能的实现,解决了用户关注后该用户依旧可以点击“+”号继续关注的bug

--- a/service_gateway/src/main/resources/application.properties
+++ b/service_gateway/src/main/resources/application.properties
@@ -32,5 +32,10 @@ spring.cloud.gateway.routes[4].id=service-favorite
 spring.cloud.gateway.routes[4].uri=lb://service-favorite
 spring.cloud.gateway.routes[4].predicates= Path=/*/favorite/**
 
+# relation-service
+spring.cloud.gateway.routes[5].id=service-relation
+spring.cloud.gateway.routes[5].uri=lb://service-relation
+spring.cloud.gateway.routes[5].predicates= Path=/*/relation/**
+
 
 
