聊天模块初步完成

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <module>service_feed</module>
         <module>service_favorite</module>
         <module>service_relation</module>
+        <module>service_chat</module>
         <module>model</module>
         <module>service_comment</module>
     </modules>
