--- a/service_chat/src/main/resources/application-dev.yml
+++ b/service_chat/src/main/resources/application-dev.yml
@@ -1,7 +1,7 @@
 server:
   port: 8026
-  servlet:
-    context-path: /douyin #request prefix
+#  servlet:
+#    context-path: /douyin #request prefix
   max-http-header-size: 20480
 
 spring:
