聊天模块完善

--- a/service_chat/pom.xml
+++ b/service_chat/pom.xml
@@ -89,7 +89,13 @@
             <artifactId>model</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.tiktok</groupId>
+            <artifactId>common_util</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
+
 
     <build>
         <plugins>
