--- a/service_gateway/src/main/resources/application.properties
+++ b/service_gateway/src/main/resources/application.properties
@@ -37,6 +37,11 @@ spring.cloud.gateway.routes[5].id=service-relation
 spring.cloud.gateway.routes[5].uri=lb://service-relation
 spring.cloud.gateway.routes[5].predicates= Path=/*/relation/**
 
+# message-service
+spring.cloud.gateway.routes[6].id=service-message
+spring.cloud.gateway.routes[6].uri=lb://service-message
+spring.cloud.gateway.routes[6].predicates= Path=/*/message/**
+
 opentracing.jaeger.enabled=true
 #opentracing.jaeger.udp-sender.host=8.134.208.93
 #opentracing.jaeger.udp-sender.port=6831
