--- a/service_chat/src/main/resources/application-dev.yml
+++ b/service_chat/src/main/resources/application-dev.yml
@@ -1,7 +1,7 @@
 server:
-  port: 8026
-#  servlet:
-#    context-path: /douyin #request prefix
+  port: 8027
+  servlet:
+    context-path: /douyin #request prefix
   max-http-header-size: 20480
 
 spring:
@@ -10,7 +10,7 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://8.134.208.93:3306/chat_test?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://8.134.208.93:3306/db_douyin?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
     #    type: com.alibaba.druid.pool.DruidDataSource
     username: ENC(5Ev24JNagGONP1Ca9+xZWg==)
     password: ENC(lQ3mg76A7j6WOm/j8zQ5dyfaDa06L4FX)
@@ -19,7 +19,7 @@ spring:
     host: 8.134.208.93
     port: 6379
     password: ENC(lQ3mg76A7j6WOm/j8zQ5dyfaDa06L4FX)
-    database: 0
+    database: 7
 
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
