--- a/service_user/src/main/resources/application-dev.yml
+++ b/service_user/src/main/resources/application-dev.yml
@@ -2,6 +2,7 @@ server:
   port: 8021
   servlet:
     context-path: /douyin #request prefix
+  max-http-header-size: 20480
 
 spring:
   application:
@@ -9,15 +10,19 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/test?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
-#    type: com.alibaba.druid.pool.DruidDataSource
-    username: root
-    password: 123
+    url: jdbc:mysql://8.134.208.93:3306/db_douyin?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
+    #    type: com.alibaba.druid.pool.DruidDataSource
+    username: ENC(5Ev24JNagGONP1Ca9+xZWg==)
+    password: ENC(lQ3mg76A7j6WOm/j8zQ5dyfaDa06L4FX)
+    hikari:
+      max-lifetime: 120000  #连接存活两分钟
+      maximum-pool-size: 300
 
   redis:
-    host: 127.0.0.1
+    host: 8.134.208.93
     port: 6379
-    database: 0
+    password: ENC(lQ3mg76A7j6WOm/j8zQ5dyfaDa06L4FX)
+    database: 1
 
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
@@ -28,16 +33,8 @@ spring:
       discovery:
         server-addr: 127.0.0.1:8848
 
-feign:
-  client:
-    config:
-      default:
-        connectTimeout: 10000
-        readTimeout: 10000
-        loggerLevel: FULL
-
 mybatis:
-#  mapper-locations: classpath:mapper/*.xml
+  mapper-locations: classpath:mapper/*.xml
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
@@ -47,11 +44,25 @@ tokenbucket:
   rate: 1
 
 
+jasypt:
+  encryptor:
+    password: ${DouyinSecretKey}  #解密密钥，通过环境变量读取
+    algorithm: PBEWithMD5AndDES
+    iv-generator-classname: org.jasypt.iv.NoIvGenerator
+
+feign:
+  client:
+    config:
+      default:
+        connectTimeout: 10000
+        readTimeout: 10000
+        loggerLevel: FULL
+
 opentracing:
   jaeger:
     enabled: true
     http-sender:
       url: http://8.134.208.93:14268/api/traces
-
-
-
+#    udp-sender:
+#      host: 8.134.208.93
+#      port: 6831
