修复无法获取对方消息的问题

--- a/service_feed/src/main/resources/application-prod.yml
+++ b/service_feed/src/main/resources/application-prod.yml
@@ -16,15 +16,15 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://8.134.208.93:3306/db_douyin?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://127.0.0.1:3306/db_douyin?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
 #    type: com.alibaba.druid.pool.DruidDataSource
-    username: ENC(5Ev24JNagGONP1Ca9+xZWg==)
-    password: ENC(lQ3mg76A7j6WOm/j8zQ5dyfaDa06L4FX)
+    username: root
+#    password: ENC(lQ3mg76A7j6WOm/j8zQ5dyfaDa06L4FX)
 
   redis:
-    host: 8.134.208.93
+    host: 127.0.0.1
     port: 6379
-    password: ENC(lQ3mg76A7j6WOm/j8zQ5dyfaDa06L4FX)
+#    password: ENC(lQ3mg76A7j6WOm/j8zQ5dyfaDa06L4FX)
     database: 2
 
   jackson:
