--- a/service_comment/pom.xml
+++ b/service_comment/pom.xml
@@ -74,6 +74,11 @@
             <artifactId>fastjson</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>1.2.11</version>
+        </dependency>
+        <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
             <version>4.1.24.Final</version>
@@ -103,6 +108,12 @@
             <groupId>com.tiktok</groupId>
             <artifactId>feign_util</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.2.11</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
