--- a/service_feed/Dockerfile
+++ b/service_feed/Dockerfile
@@ -10,5 +10,9 @@ ADD /target/service_feed-0.0.1-SNAPSHOT.jar .
 # 暴露端口
 EXPOSE 8022
 
+# 设置环境变量
+ARG MY_ENV_VAR
+ENV DouyinSecretKey=$MY_ENV_VAR
+
 # 容器运行时的启动命令
 ENTRYPOINT ["java","-jar","/app/service_feed-0.0.1-SNAPSHOT.jar"]
