--- a/service_chat/src/main/resources/application-prod.yml
+++ b/service_chat/src/main/resources/application-prod.yml
@@ -10,13 +10,13 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://8.134.208.93:3306/db_douyin?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
-    #    type: com.alibaba.druid.pool.DruidDataSource
+    url: jdbc:mysql://114.132.160.52:3306/chat_test?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
+    type: com.alibaba.druid.pool.DruidDataSource
     username: ENC(5Ev24JNagGONP1Ca9+xZWg==)
     password: ENC(lQ3mg76A7j6WOm/j8zQ5dyfaDa06L4FX)
 
   redis:
-    host: 8.134.208.93
+    host: 114.132.160.52
     port: 6379
     password: ENC(lQ3mg76A7j6WOm/j8zQ5dyfaDa06L4FX)
     database: 7
@@ -28,7 +28,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 127.0.0.1:8848
+        server-addr: 114.132.160.52:8848
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
@@ -59,7 +59,7 @@ opentracing:
   jaeger:
     enabled: true
     http-sender:
-      url: http://8.134.208.93:14268/api/traces
+      url: http://114.132.160.52:14268/api/traces
 #    udp-sender:
-#      host: 8.134.208.93
+#      host: 114.132.160.52
 #      port: 6831
