--- a/service_favorite/pom.xml
+++ b/service_favorite/pom.xml
@@ -73,6 +73,11 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>1.2.11</version>
+        </dependency>
         <!--链路追踪-->
         <dependency>
             <groupId>io.opentracing.contrib</groupId>
