--- a/service_feed/src/main/resources/application-dev.yml
+++ b/service_feed/src/main/resources/application-dev.yml
@@ -16,13 +16,13 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://8.134.208.93:3306/db_douyin?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
-    #    type: com.alibaba.druid.pool.DruidDataSource
-    username: ENC(5Ev24JNagGONP1Ca9+xZWg==)
+    url: jdbc:mysql://127.0.0.1:3306/db_douyin?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
+    type: com.alibaba.druid.pool.DruidDataSource
+    username: root
     password: ENC(lQ3mg76A7j6WOm/j8zQ5dyfaDa06L4FX)
 
   redis:
-    host: 8.134.208.93
+    host: 127.0.0.1
     port: 6379
     password: ENC(lQ3mg76A7j6WOm/j8zQ5dyfaDa06L4FX)
     database: 2
@@ -85,7 +85,7 @@ opentracing:
   jaeger:
     enabled: true
     http-sender:
-      url: http://8.134.208.93:14268/api/traces #将跟踪数据发送到 Jaeger 服务器
+      url: http://114.132.160.52:14268/api/traces #将跟踪数据发送到 Jaeger 服务器
 #    udp-sender:
-#      host: 8.134.208.93
+#      host: 114.132.160.52
 #      port: 6831
