--- a/service_relation/src/main/resources/application-dev.yml
+++ b/service_relation/src/main/resources/application-dev.yml
@@ -17,7 +17,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/db_douyin?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
-    #    type: com.alibaba.druid.pool.DruidDataSource
+    type: com.alibaba.druid.pool.DruidDataSource
     username: root
 #    password: ENC(lQ3mg76A7j6WOm/j8zQ5dyfaDa06L4FX)
 
