--- a/service_user/pom.xml
+++ b/service_user/pom.xml
@@ -102,6 +102,11 @@
             <artifactId>feign_util</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>1.2.11</version>
+        </dependency>
     </dependencies>
 
     <build>
