--- a/service_gateway/src/main/resources/application.properties
+++ b/service_gateway/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8020
 spring.application.name=service-gateway
 
 # nacos地址
-spring.cloud.nacos.discovery.server-addr=114.132.160.52:8848
+spring.cloud.nacos.discovery.server-addr=localhost:8848
 #spring.cloud.nacos.discovery.password=123456
 spring.cloud.gateway.discovery.locator.enabled=true
 
@@ -47,4 +47,6 @@ opentracing.jaeger.enabled=true
 #opentracing.jaeger.udp-sender.port=6831
 opentracing.jaeger.http-sender.url=http://114.132.160.52:14268/api/traces
 
-
+gateway.whitelist[0]=/douyin/user/register
+gateway.whitelist[1]=/douyin/user/login
+gateway.whitelist[2]=/douyin/feed
