--- a/service_gateway/pom.xml
+++ b/service_gateway/pom.xml
@@ -44,8 +44,10 @@
             <groupId>io.opentracing.contrib</groupId>
             <artifactId>opentracing-spring-cloud-feign-starter</artifactId>
         </dependency>
-
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.tiktok</groupId>
             <artifactId>common_util</artifactId>
