--- a/service_user/src/main/resources/application-prod.yml
+++ b/service_user/src/main/resources/application-prod.yml
@@ -31,7 +31,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 114.132.160.52:8848
+        server-addr: localhost:8848
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
