网关统一鉴权完善

--- a/service_gateway/src/main/resources/application.properties
+++ b/service_gateway/src/main/resources/application.properties
@@ -47,7 +47,7 @@ opentracing.jaeger.enabled=true
 #opentracing.jaeger.udp-sender.port=6831
 opentracing.jaeger.http-sender.url=http://114.132.160.52:14268/api/traces
 
-gateway.whitelist[0]=/douyin/user/register
-gateway.whitelist[1]=/douyin/user/login
+gateway.whitelist[0]=/douyin/user/register/
+gateway.whitelist[1]=/douyin/user/login/
 gateway.whitelist[2]=/douyin/feed
-gateway.whitelist[3]=/douyin/comment/list
+gateway.whitelist[3]=/douyin/comment/list/
